Enhance Render Engine